updated index hopefully trhis wokrs

--- a/index.html
+++ b/index.html
@@ -4,10 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Stinger </title>
+
+    <h1>Stinger</h1>
+    <hr>
+
+
+
+
+
+
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore.
+        Link: https://www.nameboy.com/</p>
+
+    <hr>
+
+    <p>Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
+
+    <hr>
+
+   <p>Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
+
+
+   <hr>
+
+
+    <p>Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
+
+    <hr>
+
+    <p>Mischief you say? Mischief is quite a strong-suit of mine, really hope nothing bad happens…</p>
+
+    <hr>
+
+    <p>Oh god no, please no not again, WE HAD TO REFRESH THE WEBSITE BEFORE NOOOOOOOOOOOOO</p>
+
+    <hr>
+
+    <p>Check out this new painting of mine, it took me 17 hours. Hope you enjoy</p>
+    
+    <hr>
+
+
+    <p>Finally off work. If my boss keeps testing me I’m never coming in again</p>
+    
+
+    <hr>
+
 </body>
 </html>
