Added CSS formatting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>9/20/21 3:30pm <br>
         @JohnDoe123 <br>
         
-        Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
+        Wow, you’re right. This thing is pretty cool. <br>This can help me out a lot with my future projects as a web developer.</p>
 
     <hr>
 
