--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <img src="wasp.png" alt="Stinger" height=100>
     <hr>
 
-
-
-
-
-
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,14 +28,17 @@
 
     <hr>
 
-   <p>@FrankfurterDeamatro <br>
+   <p>9/20/21 4:30pm <br>
+       @FrankfurterDeamatro <br>
        Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
 
 
    <hr>
 
 
-    <p>Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
+    <p>9/20/21 4:45pm <br>
+        @Dominion1 <br>
+        Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
 
     <hr>
 
