Improved appearance of webpage and added more timestamps

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p> 9/20/21 3:00pm <br>
+    <p> 9/20/21 3:00 PM <br>
         @fire956 <br>
         
         Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore.
@@ -27,21 +27,24 @@
 
     <hr>
 
-    <p>9/20/21 3:30pm <br>
+    <p>9/20/21 3:30 PM <br>
         @JohnDoe123 <br>
         
-        Wow, you’re right. This thing is pretty cool. <br>This can help me out a lot with my future projects as a web developer.</p>
+        Wow, you’re right. This thing is pretty cool. This can help me out a lot with my future projects as a web developer.</p>
 
     <hr>
 
-   <p>@FrankfurterDeamatro <br>
+   <p>9/19/21 2:21 PM <br>
+       @FrankfurterDeamatro <br>
        Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
 
 
    <hr>
 
 
-    <p>Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
+    <p>9/17/21 6:01 PM <br>
+        @pob45 <br>
+        Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
 
     <hr>
 
