--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
     <img src="wasp.png" alt="Stinger" height=100>
     <hr>
 
-
-
-
-
-
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +28,7 @@
 
     <hr>
 
-   <p>9/19/21 2:21 PM <br>
+   <p>9/20/21 4:30pm <br>
        @FrankfurterDeamatro <br>
        Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
 
@@ -42,8 +36,8 @@
    <hr>
 
 
-    <p>9/17/21 6:01 PM <br>
-        @pob45 <br>
+    <p>9/20/21 4:45pm <br>
+        @Dominion1 <br>
         Wow thanks, I can't wait to cause some mischief and just experiment with it.</p>
 
     <hr>
