--- a/page.html/page.html
+++ b/page.html/page.html
@@ -5,31 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Stinger Profile </title>
+    <h1 style= "text-align: left">Stinger: Your profile</h1>
+    <div style="background-image: url('../background-image.png'); backround-size: cover; height:100px; padding-top:80px;">
+    <img src="../Profile_pic.png" style = "position: relative; top: 40px; left: 15px;" height=100 padding-125 align="left">
+    </div>
 
-    <h1>Stinger</h1>
-    <img src="wasp.png" alt="Stinger: Your profile" height=100>
-    <hr>
+    
+    <hr style="margin-top: 50px;">
 
-    <link rel="stylesheet" href="style.css">
+    
+
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 
-<h2>Name: Frank Deamatro</h2>    
-<h1>User Name: @FrankfurterDeamatro</h1>
+<h2 style= "text-align: left">Name: Frank Deamatro</h2>   
+<h1 style= "text-align: left">User Name: @FrankfurterDeamatro</h1> 
 <p>Born March 16th, 2000</p>
 
 <hr>
 
 
-<img src="wasp.png" alt="Stinger" height=100>
+<img src="../wasp.png" alt="Stinger" height=100>
 
 
 
 
 
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 
 </body>
 </html>
