more chages, runnig itn tan erro, fix lator

--- a/page.html/page.html
+++ b/page.html/page.html
@@ -7,7 +7,8 @@
     <title> Stinger Profile </title>
     <h1 style= "text-align: left">Stinger: Your profile</h1>
     <div style="background-image: url('../background-image.png'); backround-size: cover; height:100px; padding-top:80px;">
-    <img src="../Profile_pic.png" style = "position: relative; top: 40px; left: 15px;" height=100 padding-125 align="left">
+    **<h1 style= "text-align: left" style=color black "">Insert photo</h1> 
+    <img src="../Profile_pic.png" style = "position: relative; top: 20px; left: 15px;" height=100 padding-125 align="left">
     </div>
 
     
@@ -22,11 +23,24 @@
 
 <h2 style= "text-align: left">Name: Frank Deamatro</h2>   
 <h1 style= "text-align: left">User Name: @FrankfurterDeamatro</h1> 
-<p>Born March 16th, 2000</p>
+<p>Born March 16th, 2000                              Joined April 6th, 2016</p>
+
+
+
+
+<h1 style= "text-align: left">See your posts!</h1>
+<hr>
+<p>Post 1: 25 minutes ago</p>
+<p>Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>Hey I found a website you can use to prank your friends or just have fun! It changes the url of any website to say anything you want. Check it out! Its sgsg.com</p>
+<p>Post 2: 5 days ago</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ante diam, ullamcorper ac vulputate ac, molestie ac est. Fusce nec lacus et lectus semper lobortis. Sed tempor efficitur lobortis.</p>
+<p>Post 3: 2 weeks ago</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ante diam, ullamcorper ac vulputate ac, molestie ac est. Fusce nec lacus et lectus semper lobortis. Sed tempor efficitur lobortis. </p>
+<p>Post 4: 3 weeks ago</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ante diam, ullamcorper ac vulputate ac, molestie ac est. Fusce nec lacus et lectus semper lobortis. Sed tempor efficitur lobortis. </p>
+
 
 <hr>
-
-
 <img src="../wasp.png" alt="Stinger" height=100>
 
 
