Fixed some of the errors

--- a/page.html/page.html
+++ b/page.html/page.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Stinger Profile </title>
-    <h1 style= "text-align: left">Stinger: Your profile</h1>
-    <div style="background-image: url('../background-image.png'); backround-size: cover; height:100px; padding-top:80px;">
-    **<h1 style= "text-align: left" style=color black "">Insert photo</h1> 
-    <img src="../Profile_pic.png" style = "position: relative; top: 20px; left: 15px;" height=100 padding-125 align="left">
+    <h1 id='profile_text'style= "text-align: left">Stinger: Your profile</h1>
+    <div id='background'>
+    **<h1 id='photo_text'>Insert photo</h1> 
+    <img id='photo'>
     </div>
 
     
-    <hr style="margin-top: 50px;">
+    <hr>
 
     
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="page.css">
 </head>
 <body>
 
