--- a/express-static-file-tutorial/website/contact-page/contact.html
+++ b/express-static-file-tutorial/website/contact-page/contact.html
@@ -7,7 +7,7 @@
     <title> Stinger </title>
 
     <h1>Stinger: Contact us!</h1>
-    <img src="bee-phone.png" alt="Stinger" height=200>
+    <img src="bee-phone.jpg" alt="Stinger" height=200>
     <hr>
 
     <link rel="stylesheet" href="contact.css">
