Refined login page

--- a/express-static-file-tutorial/website/signup/signup.html
+++ b/express-static-file-tutorial/website/signup/signup.html
@@ -18,7 +18,7 @@
         <p id='username'>Username:</p>
         <input type='text' id='userbox' name='username'><br>
         <p id='password'>Password:</p>
-        <input type='text' id='passcode' name='password'><br><br>
+        <input type='text' id='passcode' name='password'><br><br><br>
         <button id='signup_button'>Sign Up</button><br>
         <p id='sentence'>Already a member? Log in here.</p>
     </form>
