Added Navigation Bar on Key Webpages

--- a/express-static-file-tutorial/website/contact-page/contact.html
+++ b/express-static-file-tutorial/website/contact-page/contact.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <header>  
+    <nav>  
+    <ul>  
+    <li>  
+    <a onclick="window.open('profile.html', '_blank')">Home</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('login.html', '_blank')">Login</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('contact.html', '_blank')">Contact</a>  
+    </li>  
+    <li> <a onclick="window.open('#', '_blank')">About</a>  
+    </li>  
+    </ul>  
+    </nav>  
+    </header>  
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +37,9 @@
 
 
     <h3>Henry Foreman</h3>
-    <h3>Alphonso Voto</h3>
+    <h3>Alphonse Vota</h3>
     <h3>Michael Laffan</h3>
     <h3>Reed Percelay</h3>
-    <hr>
 
 
     <h1>Please reach out with any quesitons or conserns about our site!</h1>
@@ -30,7 +48,7 @@
     
     <a href="mailto:Foremanhj03@gmail.com">Foremanhj03@gmail.com</a>
     <hr>
-    <a href="mailto:Allieboy2402@gmail.com">Allieboy2402@gmail.com</a>
+    <a href="mailto:allieboy2402@gmail.com">allieboy2402@gmail.com</a>
     <hr>
     <a href="mailto:MichaelLaff10211@gmail.com">MichaelLaff10211@gmail.com</a>
     <hr>
