--- a/express-static-file-tutorial/website/profile-page/profile.html
+++ b/express-static-file-tutorial/website/profile-page/profile.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <header>  
+    <nav>  
+    <ul>  
+    <li>  
+    <a onclick="window.open('profile.html', '_blank')">Home</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('login.html', '_blank')">Login</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('contact.html', '_blank')">Contact</a>  
+    </li>  
+    <li> <a onclick="window.open('#', '_blank')">About</a>  
+    </li>  
+    </ul>  
+    </nav>  
+    </header>  
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
