--- a/Stinger-Website/website/index.html
+++ b/Stinger-Website/website/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
 
-<header>  
-<nav>  
-<ul>  
-<li>  
-<a onclick="window.open('profile.html', '_blank')">Home</a>  
-</li>  
-<li>  
-<a onclick="window.open('login.html', '_blank')">Login</a>  
-</li>  
-<li>  
-<a onclick="window.open('contact.html', '_blank')">Contact</a>  
-</li>  
-<li> <a onclick="window.open('#', '_blank')">About</a>  
-</li>  
-</ul>  
-</nav>  
-</header>  
+    <header>  
+    <nav>  
+    <ul>  
+    <li>  
+    <a onclick="window.open('index.html', '_blank')">Home</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('./login-page/login.html', '_blank')">Login</a>  
+    </li>  
+    <li>  
+    <a onclick="window.open('./contact-page/contact.html', '_blank')">Contact</a>  
+    </li>  
+    <li> 
+    <a onclick="window.open('#', '_blank')">About</a>  
+    </li>  
+    </ul>  
+    </nav>  
+    </header>  
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
