Fix bodyParser, add signup link,, made second post request

--- a/Stinger-Website/website/index.html
+++ b/Stinger-Website/website/index.html
@@ -10,7 +10,10 @@
     </li>  
     <li>  
     <a onclick="window.open('./login-page/login.html', '_blank')">Login</a>  
-    </li>  
+    </li> <br> 
+    <li>  
+    <a onclick="window.open('./signup/signup.html', '_blank')">Sign Up</a>  
+    </li>
     <li>  
     <a onclick="window.open('./contact-page/contact.html', '_blank')">Contact</a>  
     </li>  
