--- a/Stinger-Website/website/signup/signup.html
+++ b/Stinger-Website/website/signup/signup.html
@@ -6,15 +6,16 @@
     <nav>  
     <ul>  
     <li>  
-    <a onclick="window.open('profile.html', '_blank')">Home</a>  
+    <a onclick="window.moveTo('../views/index', '_blank')">Home</a>  
     </li>  
     <li>  
-    <a onclick="window.open('login.html', '_blank')">Login</a>  
+    <a onclick="window.moveTo('login.html', '_blank')">Login</a>  
     </li>  
     <li>  
-    <a onclick="window.open('contact.html', '_blank')">Contact</a>  
+    <a onclick="window.moveTo('contact.html', '_blank')">Contact</a>  
     </li>  
-    <li> <a onclick="window.open('#', '_blank')">About</a>  
+    <li> 
+    <a onclick="window.moveTo('#', '_blank')">About</a>  
     </li>  
     </ul>  
     </nav>  
