--- a/Stinger-Website/website/contact-page/contact.html
+++ b/Stinger-Website/website/contact-page/contact.html
@@ -6,16 +6,16 @@
     <nav>  
     <ul>  
     <li>  
-    <a onclick="window.open('../index.html', '_blank')">Home</a>  
+    <a onclick="window.moveTo('../views/index', '_blank')">Home</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../login-page/login.html', '_blank')">Login</a>  
+    <a onclick="window.moveTo('../login-page/login.html', '_blank')">Login</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../contact-page/contact.html', '_blank')">Contact</a>  
+    <a onclick="window.moveTo('../contact-page/contact.html', '_blank')">Contact</a>  
     </li>  
     <li> 
-    <a onclick="window.open('#', '_blank')">About</a>  
+    <a onclick="window.moveTo('#', '_blank')">About</a>  
     </li>  
     </ul>  
     </nav>  
@@ -24,7 +24,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Stinger </title>
+    <title> Stinger: Contact </title>
 
     <h1>Stinger: Contact us!</h1>
     <img id='beepic' src="bee-phone.jpg" alt="Stinger" height=200>
