--- a/Stinger-Website/website/login-page/login.html
+++ b/Stinger-Website/website/login-page/login.html
@@ -6,16 +6,16 @@
     <nav>  
     <ul>  
     <li>  
-    <a onclick="window.open('../index.html', '_blank')">Home</a>  
+    <a onclick="window.moveTo('../views/index', '_blank')">Home</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../login-page/login.html', '_blank')">Login</a>  
+    <a onclick="window.moveTo('../login-page/login.html', '_blank')">Login</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../contact-page/contact.html', '_blank')">Contact</a>  
+    <a onclick="window.moveTo('../contact-page/contact.html', '_blank')">Contact</a>  
     </li>  
     <li> 
-    <a onclick="window.open('#', '_blank')">About</a>  
+    <a onclick="window.moveTo('#', '_blank')">About</a>  
     </li>  
     </ul>  
     </nav>  
@@ -38,8 +38,9 @@
     <input type='text' id='passcode' name='password'><br><br>
     <button id='login_button'>Log in</button><br>
     <p id='sentence'>Forgot password?</p>
-    <p id='sentence'>New to Stinger? Join us here.</p>
+    <p id='sentence' onclick=window.moveTo('../signup/signup.html', '_blank')>New to Stinger? Join us here.</p>
 </form>
 
 </body>
+
 </html>
