--- a/Stinger-Website/website/login-page/login.html
+++ b/Stinger-Website/website/login-page/login.html
@@ -31,7 +31,7 @@
 <h1 id='stinger'>Stinger</h1>
 <h2 id='statement'>Welcome back.</h2>
 <p id='headline'>Don't miss your opportunity to sting more people.</p>
-<form>
+<form action="/login" method="POST">
     <p id='username'>Username:</p>
     <input type='text' id='userbox' name='username'><br>
     <p id='password'>Password:</p>
