Revamped pages and added good CSS

--- a/Stinger-Website/website/signup/signup.html
+++ b/Stinger-Website/website/signup/signup.html
@@ -29,6 +29,7 @@
 </head>
 <body>
     <h1 id='stinger'>Stinger</h1>
+    <img id='signupimage' src='../Stinger-Website/signup/wasp.png' alt='wasp.png'>
     <h2 id='statement'>Welcome to Stinger. Get ready to sting.</h2>
     <form>
         <p id='fname'>First Name:</p>
