Fixed some Navigation errors

--- a/Stinger-Website/website/login-page/login.html
+++ b/Stinger-Website/website/login-page/login.html
@@ -38,9 +38,7 @@
     <input type='text' id='passcode' name='password'><br><br>
     <button id='login_button'>Log in</button><br>
     <p id='sentence'>Forgot password?</p>
-    <p id='sentence' onclick="window.moveTo('../signup/signup.html', '_blank')">New to Stinger? Join us here.</p>
+    <p id='sentence' onclick="window.open('../signup/signup.html', '_blank')">New to Stinger? Join us here.</p>
 </form>
-
 </body>
-
 </html>
