--- a/Stinger-Website/website/signup/signup.html
+++ b/Stinger-Website/website/signup/signup.html
@@ -41,8 +41,8 @@
         <p id='password'>Password:</p>
         <input type='text' id='passcode' name='password'><br><br><br>
         <button id='signup_button'>Sign Up</button><br>
-        <p id='sentence'>Already a member? Log in here.</p>
+        <p id='sentence' onclick="window.open('../login-page/login.html', '_blank')">Already a member? Log in here.</p>
     </form>
-    
+
 </body>
 </html>
