Edits to About Page

--- a/Stinger-Website/website/about-page/about.html
+++ b/Stinger-Website/website/about-page/about.html
@@ -37,11 +37,10 @@
 					<h1>About Us</h1>
 				</div>
 				<div class="content">
-					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<h3>Welcome to Stinger.</h3>
+					<p>Stinger is a place where you can make a jab at others, as long as you don't mind getting poked back. We created Stinger to make a fun environment
+						where things aren't taken too seriously. Happy stinging!
+					</p>
 					<div class="button">
 						<a href="">Read More</a>
 					</div>
