Linked a profile to the old Index
Gave Bill Gates a username

--- a/Stinger-Website/website/index.html
+++ b/Stinger-Website/website/index.html
@@ -9,13 +9,13 @@
     <a onclick="window.open('index.html', '_blank')">Home</a>  
     </li>  
     <li>  
-    <a onclick="window.open('../login-page/login.html', '_blank')">Login</a>
+    <a onclick="window.open('./login-page/login.html', '_blank')">Login</a>
     </li>
     <li>  
-    <a onclick="window.open('../contact-page/contactus.html', '_blank')">Contact</a>  
+    <a onclick="window.open('./contact-page/contactus.html', '_blank')">Contact</a>  
     </li>  
     <li> 
-    <a onclick="window.open('../about-page/about.html', '_blank')">About</a>
+    <a onclick="window.open('./about-page/about.html', '_blank')">About</a>
     </li>  
     </ul>  
     </nav>  
@@ -36,8 +36,8 @@
 
 
     <p> 9/20/21 3:00 PM <br>
-            <input class="profiles" type="button" value="@fire956"
-            onclick="window.open('profile.html', '_blank')"> 
+            <input class="profiles" type="button" value="@ReflectiveOfTheThird"
+            onclick="window.open('./profile-page/profilecard.html', '_blank')"> 
             <br>
         Hey, I just found this website that allows you to generate domain names. I think its pretty sick. Now I don’t have to come up with names on my own anymore.
         Link: https://www.nameboy.com/</p>
