--- a/Stinger-Website/website/profile-page/profilecard.html
+++ b/Stinger-Website/website/profile-page/profilecard.html
@@ -17,6 +17,7 @@
                 <h3>Profile</h3>
                 <ul>
                     <li>Name: Bill Gates</li>
+                    <li>@ReflectiveOfTheThird</li>
                     <li>Gender: Male</li>
                     <li>Age: 66</li>
                     <li>Followers: 1200</li>
